old products/bug fixing

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -88,7 +88,13 @@
     "yourSalesProductList": "Your Sales Product List",
     "noProductHasBeenSold": "No product has been sold",
     "close": "Close",
-    "appVersion": "App Version"
+    "appVersion": "App Version",
+    "deposit": "Deposit",
+    "oldProduct": "Old Product",
+    "smartSunar": "Smart Sunaar"
+
+
+
 
 
 
