--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -88,7 +88,13 @@
     "yourSalesProductList": "तपाईंको बिक्री बस्तुहरूको सूची",
     "noProductHasBeenSold": "कुनै पनि बस्तुहरूको बिक्री गरिएको छैन",
     "close": "बन्द गर्नुहोस्",
-    "appVersion": "अ‍्‍‍‍‍‍‍‍‍‍‍‍‍‍प भर्सन"
+    "appVersion": "अ‍्‍‍‍‍‍‍‍‍‍‍‍‍‍प भर्सन",
+    "deposit": "डिपोजिट",
+    "oldProduct": "पुरानो बस्तुहरू",
+    "smartSunar": "स्मार्ट सुनार"
+
+
+
 
 
 
