new features/bug fixing/multiligual

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,108 +1,131 @@
 {
-    "@@locale": "en",
-    "dashboard": "Dashboard",
-    "lastUpdate": "last update",
-    "scanQR": "Scan QR",
-    "inventory": "Inventory",
-    "soldItems": "Sold Items",
-    "orders": "Orders",
-    "language": "Language",
-    "choose": "Choose",
-    "english": "English",
-    "nepali": "Nepali",
-    "select": "Select",
-    "chooseLanguage": "Choose Language",
-    "selectALanguage": "Select a Language",
-    "goodMorning": "Good Morning",
-    "goodAfternoon": "Good Afternoon",
-    "goodEvening": "Good Evening",
-    "placeTheQRCodeInTheArea": "Place the QR Code in the area",
-    "scanningWillBeStartedAutomatically": "Scanning will be started automatically",
-    "productInventory": "Product Inventory",
-    "selectCategory": "Select Category",
-    "all": "All",
-    "chhapawal": "Chhapawal",
-    "tejabi": "Tejabi",
-    "asalChandi": "Asal Chandi",
-    "noProductsFoundInInventory": "No products found in inventory",
-    "noProductsFound": "No Products found",
-    "name": "Name",
-    "deadline": "Deadline",
-    "remaining": "Remaining",
-    "action": "Action",
-    "createOrder": "Create Order",
-    "itemName": "Item Name",
-    "type": "Type",
-    "weight": "Weight",
-    "jyala": "Jyala",
-    "jarti": "Jarti",
-    "stone": "Stone",
-    "stonePrice": "Stone Price",
-    "fillFormToCreateOrder": "Fill form to create order",
-    "currentPrice": "Current Price",
-    "totalPrice": "Total Price",
-    "noteTotalPriceExcludingCurrentOrderPrice": "Note: Total price is excluding current order price",
-    "addOtherItem": "Add Other Item",
-    "proceed": "Proceed",
-    "oldJewelryItem": "Old Jewelry Item",
-    "fillFormToShowOldJewelry": "Fill form to show old jewelry",
-    "customerDetails": "Customer Details",
-    "contactNumber": "Contact Number",
-    "address": "Address",
-    "advancePayment": "Advance Payment",
-    "submitOrder": "Submit Order",
-    "fillCustomerDetails": "Fill Customer Details",
-    "tola": "Tola",
-    "gram": "Gram",
-    "laal": "Laal",
-    "viewProduct": "View Product",
-    "productInfo": "Product Info",
-    "productName": "Product Name",
-    "price": "Price",
-    "editItem": "Edit Item",
-    "sellItem": "Sell Item",
-    "alterFormToEditProduct": "Alter form to edit product",
-    "or": "or",
-    "subscriptionEndsAt": "Subscription Ends At",
-    "userId": "User ID",
-    "success": "Success",
-    "successfullyLoggedIn": "Successfully logged in",
-    "error": "Error",
-    "unauthorizedIncorrectPhoneNumberOrPassword": "Unauthorized: Incorrect phone number or password",
-    "internalError": "Internal Error",
-    "unknownErrorOccurred": "An unknown error occurred",
-    "orderDetails": "Order Details",
-    "orderedItems": "Ordered Items",
-    "orderedItemsTotalPrice": "Ordered Items Total Price",
-    "oldJewelryTotalPrice": "Old Jewelry Total Price",
-    "differencePrice": "Difference Price",
-    "rates": "Rates",
-    "calculator": "Calculator",
-    "sellAnother": "Sell Another?",
-    "howDoYouWantToSell": "How do you want to sell?",
-    "clearSales": "Clear Sales?",
-    "allProductsWillBeCleared": "All products will be cleared",
-    "no": "No",
-    "yes": "Yes",
-    "salesDetails": "Sales Details",
-    "yourSalesProductList": "Your Sales Product List",
-    "noProductHasBeenSold": "No product has been sold",
-    "close": "Close",
-    "appVersion": "App Version",
-    "deposit": "Deposit",
-    "oldProduct": "Old Product",
-    "smartSunar": "Smart Sunaar",
-    "chooseExpectedDeadline": "Choose Expected Deadline",
-    
-    "nameEmpty": "Name cannot be empty!",
-    "weightEmpty": "Weight cannot be empty!",
-    "jyalaEmpty": "Jyala cannot be empty!",
-    "jartiEmpty": "Jarti cannot be empty!",
-    "stonePriceEmpty": "Stone price cannot be empty!",
+  "@@locale": "en",
+  "dashboard": "Dashboard",
+  "lastUpdate": "last update",
+  "scanQR": "Scan QR",
+  "inventory": "Inventory",
+  "soldItems": "Sold Items",
+  "orders": "Orders",
+  "language": "Language",
+  "choose": "Choose",
+  "english": "English",
+  "nepali": "Nepali",
+  "select": "Select",
+  "chooseLanguage": "Choose Language",
+  "selectALanguage": "Select a Language",
+  "goodMorning": "Good Morning",
+  "goodAfternoon": "Good Afternoon",
+  "goodEvening": "Good Evening",
+  "placeTheQRCodeInTheArea": "Place the QR Code in the area",
+  "scanningWillBeStartedAutomatically": "Scanning will be started automatically",
+  "productInventory": "Product Inventory",
+  "selectCategory": "Select Category",
+  "all": "All",
+  "chhapawal": "Chhapawal",
+  "tejabi": "Tejabi",
+  "asalChandi": "Asal Chandi",
+  "noProductsFoundInInventory": "No products found in inventory",
+  "noProductsFound": "No Products found",
+  "name": "Name",
+  "deadline": "Deadline",
+  "remaining": "Remaining",
+  "action": "Action",
+  "createOrder": "Create Order",
+  "itemName": "Item Name",
+  "type": "Type",
+  "weight": "Weight",
+  "jyala": "Jyala",
+  "jarti": "Jarti",
+  "stone": "Stone",
+  "stonePrice": "Stone Price",
+  "fillFormToCreateOrder": "Fill form to create order",
+  "currentPrice": "Current Price",
+  "totalPrice": "Total Price",
+  "noteTotalPriceExcludingCurrentOrderPrice": "Note: Total price is excluding current order price",
+  "addOtherItem": "Add Other Item",
+  "proceed": "Proceed",
+  "oldJewelryItem": "Old Jewelry Item",
+  "fillFormToShowOldJewelry": "Fill form to show old jewelry",
+  "customerDetails": "Customer Details",
+  "contactNumber": "Contact Number",
+  "address": "Address",
+  "advancePayment": "Advance Payment",
+  "submitOrder": "Submit Order",
+  "fillCustomerDetails": "Fill Customer Details",
+  "tola": "Tola",
+  "gram": "Gram",
+  "laal": "Laal",
+  "viewProduct": "View Product",
+  "productInfo": "Product Info",
+  "productName": "Product Name",
+  "price": "Price",
+  "editItem": "Edit Item",
+  "sellItem": "Sell Item",
+  "alterFormToEditProduct": "Alter form to edit product",
+  "or": "or",
+  "subscriptionEndsAt": "Subscription Ends At",
+  "userId": "User ID",
+  "success": "Success",
+  "successfullyLoggedIn": "Successfully logged in",
+  "error": "Error",
+  "unauthorizedIncorrectPhoneNumberOrPassword": "Unauthorized: Incorrect phone number or password",
+  "internalError": "Internal Error",
+  "unknownErrorOccurred": "An unknown error occurred",
+  "orderDetails": "Order Details",
+  "orderedItems": "Ordered Items",
+  "orderedItemsTotalPrice": "Ordered Items Total Price",
+  "oldJewelryTotalPrice": "Old Jewelry Total Price",
+  "differencePrice": "Difference Price",
+  "rates": "Rates",
+  "calculator": "Calculator",
+  "sellAnother": "Sell Another?",
+  "howDoYouWantToSell": "How do you want to sell?",
+  "clearSales": "Clear Sales?",
+  "allProductsWillBeCleared": "All products will be cleared",
+  "no": "No",
+  "yes": "Yes",
+  "salesDetails": "Sales Details",
+  "noProductHasBeenSold": "No product has been sold",
+  "close": "Close",
+  "appVersion": "App Version",
+  "deposit": "Deposit",
+  "oldProduct": "Old Product",
+  "smartSunar": "Smart Sunaar",
+  "chooseExpectedDeadline": "Choose Expected Deadline",
+  "actualPrice": "Actual Price",
+  "yourSalesProductList": "Your Sales Product List",
+  "soldDate": "Sold Date",
+  "clear": "Clear",
+  "goldRatesInformation": "Gold Rates Information",
+  "errorFetchingRates": "Error Fetching Rates",
+  "uploadImage": "Upload Image",
+  "chooseToUploadImage": "Choose to upload image of product",
+  "gallery": "Gallery",
+  "camera": "Camera",
+  "quitEdit": "Quit Edit?",
+  "selectProductImages": "Select Product Images",
+  "allProgressWillDisappear": "All progress will disappear",
+  "errorGettingImage": "Error getting image!",
+  "oldJewellery": "Old Jewellery",
+  "anyOldJewelryDeposited": "Any old jewelry deposited?",
+  "orderAdded": "Order Added",
+  "orderCancelled": "Order Cancelled",
+  "customerDetailsCleared": "Customer Details Cleared",
+  "oldJewelryAdded": "Old Jewelry Added",
+  "oldJewelryReset": "Old Jewelry Reset",
+  "oldJewelryListEmpty": "Your old jewelry list is empty now!",
+  "salesCleared":"Sales cleared",
+  
+"deleteOrder": "Delete Order",
+  "nameEmpty": "Name cannot be empty!",
+  "weightEmpty": "Weight cannot be empty!",
+  "jyalaEmpty": "Jyala cannot be empty!",
+  "jartiEmpty": "Jarti cannot be empty!",
+  "stonePriceEmpty": "Stone price cannot be empty!",
   "weightNonNegativeZero": "Weight cannot be negative or zero!",
-  "jyalaNonNegativeZero": "Jyala cannot be negative or zero!",
-  "jartiNonNegativeZero": "Jarti cannot be negative or zero!",
-  "stonePriceNonNegativeZero": "Stone price cannot be negative or zero!",
+  "jyalaNonNegativeZero": "Jyala cannot be negative",
+  "jartiNonNegativeZero": "Jarti cannot be negative",
+  "stonePriceNonNegativeZero": "Stone price cannot be negative",
   "phoneNumberEmpty": "Phone number cannot be empty!",
   "invalidPhoneNumber": "Enter a valid 10-digit phone number!",
   "addressEmpty": "Address cannot be empty!",
