--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -1,125 +1,139 @@
 {
-    "@@locale": "ne",
-    "dashboard":"ड्यासबोर्ड",
-    "lastUpdate":"अन्तिम अपडेट",
-    "scanQR":"QR स्क्यान",
-    "inventory":"गहना सूची",
-    "soldItems":"सेल्स सूची",
-    "orders":"ऑर्डर्स",
-    "language":"भाषा",
-    "choose":"छान्नुहोस्",
-    "english":"अंग्रेजी",
-    "nepali":"नेपाली",
-    "select":"चयन गर्नुहोस्",
-    "chooseLanguage":"भाषा छान्नुहोस्",
-    "selectALanguage":"भाषा चयन गर्नुहोस्",
-    "goodMorning":"शुभ - प्रभात",
-    "goodAfternoon":"शुभ दिन",
-    "goodEvening":"शुभ सन्ध्या",
-    "placeTheQRCodeInTheArea":"क्षेत्रमा QR कोड राख्नुहोस्",
-    "scanningWillBeStartedAutomatically":"स्क्यानिङ स्वतः सुरु हुनेछ",
-    "productInventory":"हाल भएका गहनाहरु",
-    "selectCategory": "धातु प्रकार",
-    "all": "सबै",
-    "chhapawal": "छापावाल",
-    "tejabi": "तेजाबी",
-    "asalChandi": "असल चांदी",
-    "noProductsFoundInInventory": "सूचीमा कुनै उत्पादनहरू फेला परेनन्",
-    "noProductsFound": "कुनै पनि उत्पादहरू फेला परेन",
-    "name": "नाम",
-    "deadline": "म्याद",
-    "remaining": "बाँकी रकम",
-    "action":"कार्य",
-    "createOrder": "अर्डर सिर्जना गर्नुहोस्",
-    "itemName": "वस्तुको नाम",
-    "type": "प्रकार",
-    "weight": "वजन",
-    "jyala": "ज्याला",
-    "jarti": "जर्ती",
-    "stone": "पत्थर",
-    "stonePrice": "पत्थरको मूल्य",
-    "fillFormToCreateOrder": "अर्डर सिर्जनाको लागि फारम भर्नुहोस्",
-    "currentPrice": "हालको मूल्य",
-    "totalPrice": "कुल मूल्य",
-    "noteTotalPriceExcludingCurrentOrderPrice": "नोट: कुल मूल्यले हालको मूल्यलाई बाहेक गरेको छ",
-    "addOtherItem": "अन्य वस्तु थप्नुहोस्",
-    "proceed": "अगाडि बढ्नुहोस्",
-    "oldJewelryItem": "पुरानो गहना",
-    "fillFormToShowOldJewelry": "पुरानो गहना देखाउनको लागि फारम भर्नुहोस्",
-    "customerDetails": "ग्राहकको विवरण",
-    "contactNumber": "सम्पर्क नम्बर",
-    "address": "ठेगाना",
-    "advancePayment": "अग्रिम भुक्तान",
-    "submitOrder": "अर्डर सबमिट गर्नुहोस्",
-    "fillCustomerDetails": "ग्राहकको विवरण भर्नुहोस्",
-    "tola": "तोला",
-    "gram": "ग्राम",
-    "laal": "लाल",
-    "viewProduct": "बस्तु हेर्नुहोस्",
-    "productInfo": "बस्तु जानकारी",
-    "productName": "बस्तु नाम",
-    "price": "मूल्य",
-    "editItem": "सम्पादन",
-    "sellItem": "बेच्नुहोस्",
-    "alterFormToEditProduct": "बस्तु सम्पादन गर्नको लागि फारम बदल्नुहोस्",
-    "or": "अथवा",
-    "subscriptionEndsAt": "सदस्यता अन्त",
-    "userId": "प्रयोगकर्ता आइडी",
-    "success": "सफल",
-    "successfullyLoggedIn": "लग इन सफल भयो",
-    "error": "समस्या",
-    "unauthorizedIncorrectPhoneNumberOrPassword": "अनधिकृत: गलत फोन नम्बर वा पासवर्ड",
-    "internalError": "आन्तरिक समस्या",
-    "unknownErrorOccurred": "आन्तरिक समस्या देखा पर्यो",
-    "orderDetails": "अर्डर विवरण",
-    "orderedItems": "अर्डर गरिएका वस्तुहरू",
-    "orderedItemsTotalPrice": "बस्तुहरुको कुल रकम ",
-    "oldJewelryTotalPrice": "पुरानो ज्वेलरीको कुल रकम",
-    "differencePrice": "फरक रकम",
-    "rates": "दरहरु",
-    "calculator": "क्याल्कुलेटर",
-    "sellAnother": "अरू बेच्नुहोस्?",
-    "howDoYouWantToSell": "कसरी बेच्न चाहनुहुन्छ?",
-    "clearSales": "बिक्री साफ गर्नुहोस्?",
-    "allProductsWillBeCleared": "सबै बस्तुहरू साफ हुनेछ",
-    "no": "होइन",
-    "yes": "हो",
-    "salesDetails": "बिक्री विवरण",
-    "yourSalesProductList": "तपाईंको बिक्री बस्तुहरूको सूची",
-    "noProductHasBeenSold": "कुनै पनि बस्तुहरूको बिक्री गरिएको छैन",
-    "close": "बन्द गर्नुहोस्",
-    "appVersion": "अ‍्‍‍‍‍‍‍‍‍‍‍‍‍‍प भर्सन",
-    "deposit": "डिपोजिट",
-    "oldProduct": "पुरानो बस्तुहरू",
-    "smartSunar": "स्मार्ट सुनार",
-    "chooseExpectedDeadline": "प्रत्याशित म्याद छान्नुहोस्",
-    "nameEmpty": "नाम खाली हुन सक्दैन!",
-    "weightEmpty": "वजन खाली हुन सक्दैन!",
-    "jyalaEmpty": "ज्याला खाली हुन सक्दैन!",
-    "jartiEmpty": "जर्ती खाली हुन सक्दैन!",
-    "stonePriceEmpty": "रत्न मुल्य खाली हुन सक्दैन!",
-    "enterValidNumber": "मान्य नम्बर दिनुहोस्!",
-  "weightNonNegativeZero": "वजन नेगेटिभ वा शुन्य हुनुहुँदैन!",
-  "jyalaNonNegativeZero": "ज्याला नेगेटिभ वा शुन्य हुनुहुँदैन!",
-  "jartiNonNegativeZero": "जार्ती नेगेटिभ वा शुन्य हुनुहुँदैन!",
+  "@@locale": "ne",
+  "dashboard": "ड्यासबोर्ड",
+  "lastUpdate": "अन्तिम अपडेट",
+  "scanQR": "QR स्क्यान",
+  "inventory": "गहना सूची",
+  "soldItems": "सेल्स सूची",
+  "orders": "ऑर्डर्स",
+  "language": "भाषा",
+  "choose": "छान्नुहोस्",
+  "english": "अंग्रेजी",
+  "nepali": "नेपाली",
+  "select": "चयन गर्नुहोस्",
+  "chooseLanguage": "भाषा छान्नुहोस्",
+  "selectALanguage": "भाषा चयन गर्नुहोस्",
+  "goodMorning": "शुभ - प्रभात",
+  "goodAfternoon": "शुभ दिन",
+  "goodEvening": "शुभ सन्ध्या",
+  "placeTheQRCodeInTheArea": "क्षेत्रमा QR कोड राख्नुहोस्",
+  "scanningWillBeStartedAutomatically": "स्क्यानिङ स्वतः सुरु हुनेछ",
+  "productInventory": "हाल भएका गहनाहरु",
+  "selectCategory": "धातु प्रकार",
+  "all": "सबै",
+  "chhapawal": "छापावाल",
+  "tejabi": "तेजाबी",
+  "asalChandi": "असल चांदी",
+  "noProductsFoundInInventory": "सूचीमा कुनै उत्पादनहरू फेला परेनन्",
+  "noProductsFound": "कुनै पनि उत्पादहरू फेला परेन",
+  "name": "नाम",
+  "deadline": "म्याद",
+  "remaining": "बाँकी रकम",
+  "action": "कार्य",
+  "createOrder": "अर्डर सिर्जना गर्नुहोस्",
+  "itemName": "वस्तुको नाम",
+  "type": "प्रकार",
+  "weight": "वजन",
+  "jyala": "ज्याला",
+  "jarti": "जर्ती",
+  "stone": "पत्थर",
+  "stonePrice": "पत्थरको मूल्य",
+  "fillFormToCreateOrder": "अर्डर सिर्जनाको लागि फारम भर्नुहोस्",
+  "currentPrice": "हालको मूल्य",
+  "totalPrice": "कुल मूल्य",
+  "noteTotalPriceExcludingCurrentOrderPrice": "नोट: कुल मूल्यले हालको मूल्यलाई बाहेक गरेको छ",
+  "addOtherItem": "अन्य वस्तु थप्नुहोस्",
+  "proceed": "अगाडि बढ्नुहोस्",
+  "oldJewelryItem": "पुरानो गहना",
+  "fillFormToShowOldJewelry": "पुरानो गहना देखाउनको लागि फारम भर्नुहोस्",
+  "customerDetails": "ग्राहकको विवरण",
+  "contactNumber": "सम्पर्क नम्बर",
+  "address": "ठेगाना",
+  "advancePayment": "अग्रिम भुक्तान",
+  "submitOrder": "अर्डर सबमिट गर्नुहोस्",
+  "fillCustomerDetails": "ग्राहकको विवरण भर्नुहोस्",
+  "tola": "तोला",
+  "gram": "ग्राम",
+  "laal": "लाल",
+  "viewProduct": "बस्तु हेर्नुहोस्",
+  "productInfo": "बस्तु जानकारी",
+  "productName": "बस्तु नाम",
+  "price": "मूल्य",
+  "editItem": "सम्पादन",
+  "sellItem": "बेच्नुहोस्",
+  "alterFormToEditProduct": "बस्तु सम्पादन गर्नको लागि फारम बदल्नुहोस्",
+  "or": "अथवा",
+  "subscriptionEndsAt": "सदस्यता अन्त",
+  "userId": "प्रयोगकर्ता आइडी",
+  "success": "सफल",
+  "successfullyLoggedIn": "लग इन सफल भयो",
+  "error": "समस्या",
+  "unauthorizedIncorrectPhoneNumberOrPassword": "अनधिकृत: गलत फोन नम्बर वा पासवर्ड",
+  "internalError": "आन्तरिक समस्या",
+  "unknownErrorOccurred": "आन्तरिक समस्या देखा पर्यो",
+  "orderDetails": "अर्डर विवरण",
+  "orderedItems": "अर्डर गरिएका वस्तुहरू",
+  "orderedItemsTotalPrice": "बस्तुहरुको कुल रकम ",
+  "oldJewelryTotalPrice": "पुरानो ज्वेलरीको कुल रकम",
+  "differencePrice": "फरक रकम",
+  "rates": "दरहरु",
+  "calculator": "क्याल्कुलेटर",
+  "sellAnother": "अरू बेच्नुहोस्?",
+  "howDoYouWantToSell": "कसरी बेच्न चाहनुहुन्छ?",
+  "clearSales": "बिक्री साफ गर्नुहोस्?",
+  "allProductsWillBeCleared": "सबै बस्तुहरू साफ हुनेछ",
+  "no": "होइन",
+  "yes": "हो",
+  "salesDetails": "बिक्री विवरण",
+  "noProductHasBeenSold": "कुनै पनि बस्तुहरूको बिक्री गरिएको छैन",
+  "close": "बन्द गर्नुहोस्",
+  "appVersion": "अ‍्‍‍‍‍‍‍‍‍‍‍‍‍‍प भर्सन",
+  "deposit": "डिपोजिट",
+  "oldProduct": "पुरानो बस्तुहरू",
+  "smartSunar": "स्मार्ट सुनार",
+  "chooseExpectedDeadline": "प्रत्याशित म्याद छान्नुहोस्",
+  "actualPrice": "वास्तविक मूल्य",
+  "yourSalesProductList": "बिक्रि बस्तुहरू सूची",
+  "soldDate": "बिक्रि मिति",
+  "clear": "रिसेट",
+  "goldRatesInformation": "दर सूचना",
+  "errorFetchingRates": "दरहरू प्राप्त गर्न त्रुटि",
+  "uploadImage": "अपलोड इमेज",
+  "chooseToUploadImage": "बस्तुको तस्वीर अपलोड गर्नको लागि छान्नुहोस्",
+  "gallery": "ग्यालरी",
+  "camera": "क्यामेरा",
+  "quitEdit": "सम्पादन बन्द गर्नुहोस्?",
+  "selectProductImages": "बस्तुको तस्वीर छनौट गर्नुहोस्",
+  "allProgressWillDisappear": "सबै प्रगति हटिनेछ",
+  "errorGettingImage": "तस्वीर प्राप्त गर्न मा त्रुटि!",
+  "oldJewellery": "पुरानो ज्वेलरी",
+  "anyOldJewelryDeposited": "कुनै पुरानो ज्वेलरी जम्मा छ?",
+  "orderAdded": "अर्डर थपियो",
+  "orderCancelled": "अर्डर रद्द गरियो",
+  "customerDetailsCleared": "ग्राहकको विवरण हटाइएको छ",
+  "oldJewelryAdded": "पुरानो ज्वेलरी थपियो",
+  "oldJewelryReset": "पुरानो ज्वेलरी रिसेट गरियो",
+  "oldJewelryListEmpty": "तपाईंको पुरानो ज्वेलरी तालिका खाली छ!",
+  "deleteOrder": "अर्डर मेटाउनुहोस्",
+  "salesCleared": "सेल रद्द गरियो",
+
+
+
+
+
+  "nameEmpty": "नाम खाली हुन सक्दैन!",
+  "weightEmpty": "वजन खाली हुन सक्दैन!",
+  "jyalaEmpty": "ज्याला खाली हुन सक्दैन!",
+  "jartiEmpty": "जर्ती खाली हुन सक्दैन!",
+  "stonePriceEmpty": "रत्न मुल्य खाली हुन सक्दैन!",
+  "enterValidNumber": "मान्य नम्बर दिनुहोस्!",
+  "weightNonNegativeZero": "वजन नेगेटिभ हुनुहुँदैन!",
+  "jyalaNonNegativeZero": "ज्याला नेगेटिभ हुनुहुँदैन!",
+  "jartiNonNegativeZero": "जार्ती नेगेटिभ हुनुहुँदैन!",
   "stonePriceNonNegativeZero": "रत्न मूल्य नेगेटिभ वा शुन्य हुनुहुँदैन!",
   "phoneNumberEmpty": "फोन नम्बर खाली हुन सकदैन!",
   "invalidPhoneNumber": "सही १० अंकको फोन नम्बर प्रविष्ट गर्नुहोस्!",
   "addressEmpty": "ठेगाना खाली हुन सकदैन!",
   "advancePaymentEmpty": "अग्रिम भुक्तान खाली हुन सकदैन!",
   "advancePaymentNonNegative": "अग्रिम 0 भन्दा कम हुन सकदैन"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
