--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -96,7 +96,7 @@
   "yourSalesProductList": "Your Sales Product List",
   "soldDate": "Sold Date",
   "clear": "Clear",
-  "goldRatesInformation": "Gold Rates Information",
+  "goldRates": "Gold Rates Information",
   "errorFetchingRates": "Error Fetching Rates",
   "uploadImage": "Upload Image",
   "chooseToUploadImage": "Choose to upload image of product",
