--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "ne",
   "dashboard": "ड्यासबोर्ड",
-  "lastUpdate": "अन्तिम अपडेट",
+  "lastUpdate": "मिति (पछिल्लो अपडेट)",
   "scanQR": "QR स्क्यान",
   "inventory": "गहना सूची",
   "soldItems": "सेल्स सूची",
@@ -28,9 +28,10 @@
   "noProductsFound": "कुनै पनि उत्पादहरू फेला परेन",
   "name": "नाम",
   "deadline": "म्याद",
-  "remaining": "बाँकी रकम",
+  "remaining": "बाँकी",
+  "remainingAmount": "बाँकी रकम",
   "action": "कार्य",
-  "createOrder": "अर्डर सिर्जना गर्नुहोस्",
+  "createOrder": "अर्डर लिनुहोस्",
   "itemName": "वस्तुको नाम",
   "type": "प्रकार",
   "weight": "वजन",
@@ -50,7 +51,7 @@
   "contactNumber": "सम्पर्क नम्बर",
   "address": "ठेगाना",
   "advancePayment": "अग्रिम भुक्तान",
-  "submitOrder": "अर्डर सबमिट गर्नुहोस्",
+  "submitOrder": "सेव गर्नुहोस",
   "fillCustomerDetails": "ग्राहकको विवरण भर्नुहोस्",
   "tola": "तोला",
   "gram": "ग्राम",
@@ -59,11 +60,11 @@
   "productInfo": "बस्तु जानकारी",
   "productName": "बस्तु नाम",
   "price": "मूल्य",
-  "editItem": "सम्पादन",
-  "sellItem": "बेच्नुहोस्",
-  "alterFormToEditProduct": "बस्तु सम्पादन गर्नको लागि फारम बदल्नुहोस्",
+  "editItem": "इडिट",
+  "sellItem": "स्टक बाट हटाउनुहोस्",
+  "alterFormToEditProduct": "इडिट गर्नको लागि फारम बदल्नुहोस्",
   "or": "अथवा",
-  "subscriptionEndsAt": "सदस्यता अन्त",
+  "subscriptionEndsAt": "सेवाको अन्त्य",
   "userId": "प्रयोगकर्ता आइडी",
   "success": "सफल",
   "successfullyLoggedIn": "लग इन सफल भयो",
@@ -73,36 +74,37 @@
   "unknownErrorOccurred": "आन्तरिक समस्या देखा पर्यो",
   "orderDetails": "अर्डर विवरण",
   "orderedItems": "अर्डर गरिएका वस्तुहरू",
-  "orderedItemsTotalPrice": "बस्तुहरुको कुल रकम ",
-  "oldJewelryTotalPrice": "पुरानो ज्वेलरीको कुल रकम",
-  "differencePrice": "फरक रकम",
-  "rates": "दरहरु",
+  "orderedItemsTotalPrice": "कुल रकम - नया अर्डर",
+  "oldJewelryTotalPrice": "कुल रकम - पुरानो गहना",
+  "differencePrice": "लागत रकम",
+  "rates": "आजको मूल्य",
   "calculator": "क्याल्कुलेटर",
-  "sellAnother": "अरू बेच्नुहोस्?",
-  "howDoYouWantToSell": "कसरी बेच्न चाहनुहुन्छ?",
-  "clearSales": "बिक्री साफ गर्नुहोस्?",
-  "allProductsWillBeCleared": "सबै बस्तुहरू साफ हुनेछ",
+  "sellAnother": "अर्को स्टक बाहिर गर्नुहोस",
+  "howDoYouWantToSell": "कसरी स्टक हटाउनुहुन्छ?",
+  "clearSales": "रिपोर्ट मेट्नुहोस्?",
+  "allProductsWillBeCleared": "सबै बस्तुहरू मेटिनेछ",
   "no": "होइन",
   "yes": "हो",
   "salesDetails": "बिक्री विवरण",
-  "noProductHasBeenSold": "कुनै पनि बस्तुहरूको बिक्री गरिएको छैन",
+  "noProductHasBeenSold": "स्टक बाहिर भयको छैन",
   "close": "बन्द गर्नुहोस्",
-  "appVersion": "अ‍्‍‍‍‍‍‍‍‍‍‍‍‍‍प भर्सन",
-  "deposit": "डिपोजिट",
+  "appVersion": "एप भर्सन",
+  "deposit": "अडना लिनुहोस्",
   "oldProduct": "पुरानो बस्तुहरू",
   "smartSunar": "स्मार्ट सुनार",
-  "chooseExpectedDeadline": "प्रत्याशित म्याद छान्नुहोस्",
-  "actualPrice": "वास्तविक मूल्य",
+  "chooseExpectedDeadline": "म्याद मिति छान्नुहोस्",
+  "actualPrice": "मूल्य",
+  "jwelleryPrice": "गहना मूल्य",
   "yourSalesProductList": "बिक्रि बस्तुहरू सूची",
-  "soldDate": "बिक्रि मिति",
+  "soldDate": "स्टक बाहिर मिति",
   "clear": "रिसेट",
-  "goldRatesInformation": "दर सूचना",
-  "errorFetchingRates": "दरहरू प्राप्त गर्न त्रुटि",
+  "goldRates": "सुनचाँदीको दर भाउ",
+  "errorFetchingRates": "दरहरू प्राप्त गर्दा त्रुटि",
   "uploadImage": "अपलोड इमेज",
-  "chooseToUploadImage": "बस्तुको तस्वीर अपलोड गर्नको लागि छान्नुहोस्",
+  "chooseToUploadImage": "बस्तुको तस्वीर छान्नुहोस्",
   "gallery": "ग्यालरी",
   "camera": "क्यामेरा",
-  "quitEdit": "सम्पादन बन्द गर्नुहोस्?",
+  "quitEdit": "इडिट बन्द गर्नुहोस्?",
   "selectProductImages": "बस्तुको तस्वीर छनौट गर्नुहोस्",
   "allProgressWillDisappear": "सबै प्रगति हटिनेछ",
   "errorGettingImage": "तस्वीर प्राप्त गर्न मा त्रुटि!",
@@ -112,27 +114,28 @@
   "orderCancelled": "अर्डर रद्द गरियो",
   "customerDetailsCleared": "ग्राहकको विवरण हटाइएको छ",
   "oldJewelryAdded": "पुरानो ज्वेलरी थपियो",
-  "oldJewelryReset": "पुरानो ज्वेलरी रिसेट गरियो",
-  "oldJewelryListEmpty": "तपाईंको पुरानो ज्वेलरी तालिका खाली छ!",
+  "oldJewelryReset": "पुरानो ज्वेलरी रिसेट भयो",
+  "oldJewelryListEmpty": "पुरानो ज्वेलरी तालिका खाली छ!",
   "deleteOrder": "अर्डर मेटाउनुहोस्",
   "salesCleared": "सेल रद्द गरियो",
+  
   "noProductToSell": "बेच्नको लागि कुनै बस्तु छैन",
   "duplicateFound": "नक्कल परेखियो!",
   "itemAlreadyInList": "यो बस्तु पहिले नै सूचीमा छ",
   "charge": "चार्ज",
   "chargeCannotBeNegative": "चार्ज  0 भन्दा कम हुन सकदैन",
   "areYouSure": "के तपाईं निश्चित हुनुहुन्छ?",
-  
+
   "nameEmpty": "नाम खाली हुन सक्दैन!",
   "weightEmpty": "वजन खाली हुन सक्दैन!",
   "jyalaEmpty": "ज्याला खाली हुन सक्दैन!",
   "jartiEmpty": "जर्ती खाली हुन सक्दैन!",
-  "stonePriceEmpty": "रत्न मुल्य खाली हुन सक्दैन!",
-  "enterValidNumber": "मान्य नम्बर दिनुहोस्!",
+  "stonePriceEmpty": "पत्थर मुल्य खाली हुन सक्दैन!",
+  "enterValidNumber": "नम्बर मिलेन!",
   "weightNonNegativeZero": "वजन नेगेटिभ हुनुहुँदैन!",
   "jyalaNonNegativeZero": "ज्याला नेगेटिभ हुनुहुँदैन!",
   "jartiNonNegativeZero": "जार्ती नेगेटिभ हुनुहुँदैन!",
-  "stonePriceNonNegativeZero": "रत्न मूल्य नेगेटिभ वा शुन्य हुनुहुँदैन!",
+  "stonePriceNonNegativeZero": "पत्थर मूल्य नेगेटिभ वा शुन्य हुनुहुँदैन!",
   "phoneNumberEmpty": "फोन नम्बर खाली हुन सकदैन!",
   "invalidPhoneNumber": "सही १० अंकको फोन नम्बर प्रविष्ट गर्नुहोस्!",
   "addressEmpty": "ठेगाना खाली हुन सकदैन!",
