--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -61,7 +61,7 @@
   "productName": "बस्तु नाम",
   "price": "मूल्य",
   "editItem": "इडिट",
-  "sellItem": "स्टक बाट हटाउनुहोस्",
+  "sellItem": "बेच्नुहोस",
   "alterFormToEditProduct": "इडिट गर्नको लागि फारम बदल्नुहोस्",
   "or": "अथवा",
   "subscriptionEndsAt": "सेवाको अन्त्य",
@@ -93,7 +93,7 @@
   "oldProduct": "पुरानो बस्तुहरू",
   "smartSunar": "स्मार्ट सुनार",
   "chooseExpectedDeadline": "म्याद मिति छान्नुहोस्",
-  "actualPrice": "मूल्य",
+  "actualPrice": "वास्तविक मूल्य",
   "jwelleryPrice": "गहना मूल्य",
   "yourSalesProductList": "बिक्रि बस्तुहरू सूची",
   "soldDate": "स्टक बाहिर मिति",
@@ -125,6 +125,14 @@
   "charge": "चार्ज",
   "chargeCannotBeNegative": "चार्ज  0 भन्दा कम हुन सकदैन",
   "areYouSure": "के तपाईं निश्चित हुनुहुन्छ?",
+  "rateCannotBeNegative": "दर 0 भन्दा कम हुन सकदैन",
+"rate":"दर",
+"rateCannotBeEmpty":"दर खाली हुन सक्दैन!",
+"loss":"नुक्सान",
+"lossCannotBeNegative": "नुक्सान 0 भन्दा कम हुन सकदैन",
+"lossCannotBeMoreThanWeight": "नुक्सान वजन भन्दा बढी छ",
+"percentage":"%",
+
 
   "nameEmpty": "नाम खाली हुन सक्दैन!",
   "weightEmpty": "वजन खाली हुन सक्दैन!",
