sales module revised

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,10 +42,10 @@
   "currentPrice": "Current Price",
   "totalPrice": "Total Price",
   "noteTotalPriceExcludingCurrentOrderPrice": "Note: Total price is excluding current order price",
-  "addOtherItem": "Add Other Item",
+  "addOtherItem": "Add Item",
   "proceed": "Proceed",
-  "oldJewelryItem": "Old Jewelry Item",
-  "fillFormToShowOldJewelry": "Fill form to show old jewelry",
+  "oldJewelleryItem": "Old Jewellery Item",
+  "fillFormToShowOldJwellery": "Fill form to show old jewelry",
   "customerDetails": "Customer Details",
   "contactNumber": "Contact Number",
   "address": "Address",
@@ -74,7 +74,7 @@
   "orderDetails": "Order Details",
   "orderedItems": "Ordered Items",
   "orderedItemsTotalPrice": "Ordered Items Total Price",
-  "oldJewelryTotalPrice": "Old Jewelry Total Price",
+  "oldJwelleryTotalPrice": "Old Jwellery Total Price",
   "differencePrice": "Difference Price",
   "rates": "Rates",
   "calculator": "Calculator",
@@ -107,29 +107,31 @@
   "allProgressWillDisappear": "All progress will disappear",
   "errorGettingImage": "Error getting image!",
   "oldJewellery": "Old Jewellery",
-  "anyOldJewelryDeposited": "Any old jewelry deposited?",
+  "anyOldJwelleryDeposited": "Any old jewelry deposited?",
   "orderAdded": "Order Added",
   "orderCancelled": "Order Cancelled",
   "customerDetailsCleared": "Customer Details Cleared",
-  "oldJewelryAdded": "Old Jewelry Added",
-  "oldJewelryReset": "Old Jewelry Reset",
-  "oldJewelryListEmpty": "Your old jewelry list is empty now!",
+  "oldJwelleryAdded": "Old Jwellery Added",
+  "oldJwelleryReset": "Old Jwellery Reset",
+  "oldJwelleryListEmpty": "Your old jewelry list is empty now!",
   "salesCleared": "Sales cleared",
   "deleteOrder": "Delete Order",
+  "deleteSale": "Delete Sale",
+  "soldItemPrice": "Sold Item Price",
+  "soldOldItemPrice": "Sold Old Item Price",
   "noProductToSell": "No product to sell",
   "duplicateFound": "Duplicate found!",
   "itemAlreadyInList": "This item is already in the list",
   "charge": "Charge",
   "chargeCannotBeNegative": "Charge cannot be negative",
   "areYouSure": "Are you sure?",
-"rateCannotBeNegative": "Rate cannot be negative",
-"rate":"rate",
-"rateCannotBeEmpty":"rate cannot be empty!",
-"loss":"loss",
-"lossCannotBeNegative":"loss cannot be negative",
-"lossCannotBeMoreThanWeight": "Loss is more than weight",
-"percentage":"%",
-  
+  "rateCannotBeNegative": "Rate cannot be negative",
+  "rate": "rate",
+  "rateCannotBeEmpty": "rate cannot be empty!",
+  "loss": "loss",
+  "lossCannotBeNegative": "loss cannot be negative",
+  "lossCannotBeMoreThanWeight": "Loss is more than weight",
+  "percentage": "%",
   "nameEmpty": "Name cannot be empty!",
   "weightEmpty": "Weight cannot be empty!",
   "jyalaEmpty": "Jyala cannot be empty!",
