--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -45,8 +45,8 @@
   "noteTotalPriceExcludingCurrentOrderPrice": "नोट: कुल मूल्यले हालको मूल्यलाई बाहेक गरेको छ",
   "addOtherItem": "अन्य वस्तु थप्नुहोस्",
   "proceed": "अगाडि बढ्नुहोस्",
-  "oldJewelryItem": "पुरानो गहना",
-  "fillFormToShowOldJewelry": "पुरानो गहना देखाउनको लागि फारम भर्नुहोस्",
+  "oldJwelleryItem": "पुरानो गहना",
+  "fillFormToShowOldJwellery": "पुरानो गहना देखाउनको लागि फारम भर्नुहोस्",
   "customerDetails": "ग्राहकको विवरण",
   "contactNumber": "सम्पर्क नम्बर",
   "address": "ठेगाना",
@@ -75,7 +75,7 @@
   "orderDetails": "अर्डर विवरण",
   "orderedItems": "अर्डर गरिएका वस्तुहरू",
   "orderedItemsTotalPrice": "कुल रकम - नया अर्डर",
-  "oldJewelryTotalPrice": "कुल रकम - पुरानो गहना",
+  "oldJwelleryTotalPrice": "कुल रकम - पुरानो गहना",
   "differencePrice": "लागत रकम",
   "rates": "आजको मूल्य",
   "calculator": "क्याल्कुलेटर",
@@ -95,7 +95,7 @@
   "chooseExpectedDeadline": "म्याद मिति छान्नुहोस्",
   "actualPrice": "वास्तविक मूल्य",
   "jwelleryPrice": "गहना मूल्य",
-  "yourSalesProductList": "बिक्रि बस्तुहरू सूची",
+  "yourSalesProductList": "बिक्रि बस्तुहरूको सूची",
   "soldDate": "स्टक बाहिर मिति",
   "clear": "रिसेट",
   "goldRates": "सुनचाँदीको दर भाउ",
@@ -109,16 +109,18 @@
   "allProgressWillDisappear": "सबै प्रगति हटिनेछ",
   "errorGettingImage": "तस्वीर प्राप्त गर्न मा त्रुटि!",
   "oldJewellery": "पुरानो ज्वेलरी",
-  "anyOldJewelryDeposited": "कुनै पुरानो ज्वेलरी जम्मा छ?",
+  "anyOldJwelleryDeposited": "कुनै पुरानो ज्वेलरी जम्मा छ?",
   "orderAdded": "अर्डर थपियो",
   "orderCancelled": "अर्डर रद्द गरियो",
   "customerDetailsCleared": "ग्राहकको विवरण हटाइएको छ",
-  "oldJewelryAdded": "पुरानो ज्वेलरी थपियो",
-  "oldJewelryReset": "पुरानो ज्वेलरी रिसेट भयो",
-  "oldJewelryListEmpty": "पुरानो ज्वेलरी तालिका खाली छ!",
+  "oldJwelleryAdded": "पुरानो ज्वेलरी थपियो",
+  "oldJwelleryReset": "पुरानो ज्वेलरी रिसेट भयो",
+  "oldJwelleryListEmpty": "पुरानो ज्वेलरी तालिका खाली छ!",
   "deleteOrder": "अर्डर मेटाउनुहोस्",
+  "deleteSale": "सेल मेटाउनुहोस्",
   "salesCleared": "सेल रद्द गरियो",
-  
+  "soldItemPrice": "बेचिएको ज्वेलरीको मूल्य",
+  "soldOldItemPrice": "बेचिएको पुरानो ज्वेलरीको मूल्य",
   "noProductToSell": "बेच्नको लागि कुनै बस्तु छैन",
   "duplicateFound": "नक्कल परेखियो!",
   "itemAlreadyInList": "यो बस्तु पहिले नै सूचीमा छ",
@@ -126,14 +128,12 @@
   "chargeCannotBeNegative": "चार्ज  0 भन्दा कम हुन सकदैन",
   "areYouSure": "के तपाईं निश्चित हुनुहुन्छ?",
   "rateCannotBeNegative": "दर 0 भन्दा कम हुन सकदैन",
-"rate":"दर",
-"rateCannotBeEmpty":"दर खाली हुन सक्दैन!",
-"loss":"नुक्सान",
-"lossCannotBeNegative": "नुक्सान 0 भन्दा कम हुन सकदैन",
-"lossCannotBeMoreThanWeight": "नुक्सान वजन भन्दा बढी छ",
-"percentage":"%",
-
-
+  "rate": "दर",
+  "rateCannotBeEmpty": "दर खाली हुन सक्दैन!",
+  "loss": "नुक्सान",
+  "lossCannotBeNegative": "नुक्सान 0 भन्दा कम हुन सकदैन",
+  "lossCannotBeMoreThanWeight": "नुक्सान वजन भन्दा बढी छ",
+  "percentage": "%",
   "nameEmpty": "नाम खाली हुन सक्दैन!",
   "weightEmpty": "वजन खाली हुन सक्दैन!",
   "jyalaEmpty": "ज्याला खाली हुन सक्दैन!",
