bug fixing / dates fixing

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,6 +37,7 @@
   "jyala": "Jyala",
   "jarti": "Jarti",
   "stone": "Stone",
+  "total":"Total",
   "stonePrice": "Stone Price",
   "fillFormToCreateOrder": "Fill form to create order",
   "currentPrice": "Current Price",
@@ -117,8 +118,8 @@
   "salesCleared": "Sales cleared",
   "deleteOrder": "Delete Order",
   "deleteSale": "Delete Sale",
-  "soldItemPrice": "Sold Item Price",
-  "soldOldItemPrice": "Sold Old Item Price",
+  "soldItemPrice": "Sold Jwellery Price",
+  "soldOldItemPrice": "Old Jwellery Price",
   "noProductToSell": "No product to sell",
   "duplicateFound": "Duplicate found!",
   "itemAlreadyInList": "This item is already in the list",
