--- a/lib/l10n/app_ne.arb
+++ b/lib/l10n/app_ne.arb
@@ -18,7 +18,7 @@
   "goodEvening": "शुभ सन्ध्या",
   "placeTheQRCodeInTheArea": "क्षेत्रमा QR कोड राख्नुहोस्",
   "scanningWillBeStartedAutomatically": "स्क्यानिङ स्वतः सुरु हुनेछ",
-  "productInventory": "हाल भएका गहनाहरु",
+  "productInventory": "हाल भएका गहनाहरु ",
   "selectCategory": "धातु प्रकार",
   "all": "सबै",
   "chhapawal": "छापावाल",
@@ -56,6 +56,7 @@
   "tola": "तोला",
   "gram": "ग्राम",
   "laal": "लाल",
+  "total":"कुल",
   "viewProduct": "बस्तु हेर्नुहोस्",
   "productInfo": "बस्तु जानकारी",
   "productName": "बस्तु नाम",
@@ -99,7 +100,7 @@
   "soldDate": "स्टक बाहिर मिति",
   "clear": "रिसेट",
   "goldRates": "सुनचाँदीको दर भाउ",
-  "errorFetchingRates": "दरहरू प्राप्त गर्दा त्रुटि",
+  "errorFetchingRates": "दरहरू प्राप्त गर्दा त्रु टि",
   "uploadImage": "अपलोड इमेज",
   "chooseToUploadImage": "बस्तुको तस्वीर छान्नुहोस्",
   "gallery": "ग्यालरी",
@@ -107,7 +108,7 @@
   "quitEdit": "इडिट बन्द गर्नुहोस्?",
   "selectProductImages": "बस्तुको तस्वीर छनौट गर्नुहोस्",
   "allProgressWillDisappear": "सबै प्रगति हटिनेछ",
-  "errorGettingImage": "तस्वीर प्राप्त गर्न मा त्रुटि!",
+  "errorGettingImage": "तस्वीर प्राप्त गर्न मा त्रु टि!",
   "oldJewellery": "पुरानो ज्वेलरी",
   "anyOldJwelleryDeposited": "कुनै पुरानो ज्वेलरी जम्मा छ?",
   "orderAdded": "अर्डर थपियो",
@@ -119,8 +120,8 @@
   "deleteOrder": "अर्डर मेटाउनुहोस्",
   "deleteSale": "सेल मेटाउनुहोस्",
   "salesCleared": "सेल रद्द गरियो",
-  "soldItemPrice": "बेचिएको ज्वेलरीको मूल्य",
-  "soldOldItemPrice": "बेचिएको पुरानो ज्वेलरीको मूल्य",
+  "soldItemPrice": "ज्वेलरीको मूल्य",
+  "soldOldItemPrice": "पुरानो ज्वेलरीको मूल्य",
   "noProductToSell": "बेच्नको लागि कुनै बस्तु छैन",
   "duplicateFound": "नक्कल परेखियो!",
   "itemAlreadyInList": "यो बस्तु पहिले नै सूचीमा छ",
@@ -159,5 +160,6 @@
   "passwordEmpty": "पासवर्ड खाली हुन सक्दैन",
   "passwordLength": "पासवर्ड कम्तिमा ६ अक्षर लामो हुनुपर्छ",
   "confirmPasswordMatch": "नयाँ पासवर्ड मिलेन",
-  "userIdEmpty": "प्रयोगकर्ता आईडी खाली हुन सक्दैन"
+  "userIdEmpty": "प्रयोगकर्ता आईडी खाली हुन सक्दैन",
+  "oldJewelleryItem": "पुरानो ज्वेलरी"
 }
